develop the slider of home page

--- a/app/css/element.scss
+++ b/app/css/element.scss
@@ -1,6 +1,6 @@
 @import "./layout.scss";
 
-@mixin btn($size:14px, $color:#fff, $bgcolor:#FO4752, $padding:5px, $radius:5px) {
+@mixin btn($size:14px, $color:#fff, $bgcolor:#f04752, $padding:5px, $radius:5px) {
   padding: $padding;
   background-color: $bgcolor;
   border-radius: $radius;
